* ENH: New FSL interface: ProbTrackX2
* ENH: New misc algorithm: NormalizeProbabilityMapSet
* ENH: Support for elastix via a set of new interfaces: Registration, ApplyWarp, 
       AnalyzeWarp, PointsWarp, and EditTransform
* ENH: New ANTs interface: ApplyTransformsToPoints
* ENH: New metrics group in algorithms. Now Distance, Overlap, and FuzzyOverlap
       are found in nipype.algorithms.metrics instead of misc
* ENH: New interface in algorithms.metrics: ErrorMap (a voxel-wise diff map).
* ENH: New FreeSurfer workflow: create_skullstripped_recon_flow()
* ENH: New data grabbing interface that works over SSH connections, SSHDataGrabber
* ENH: New color mode for write_graph
* ENH: You can now force MapNodes to be run serially
* ENH: New ANTs interface: LaplacianThickness
* FIX: MRTrix tracking algorithms were ignoring mask parameters.
* FIX: FNIRT registration pathway and associated OpenFMRI example script
* FIX: spm12b compatibility for Model estimate
* FIX: Batch scheduler controls the number of maximum jobs properly
* FIX: Update for FSL 5.0.7 which deprecated Contrast Manager
* ENH: Added ANTS based openfmri workflow

Release 0.9.2 (January 31, 2014)
============

* FIX: DataFinder was broken due to a typo
* FIX: Order of DataFinder outputs was not guaranteed, it's human sorted now
* ENH: New interfaces: Vnifti2Image, VtoMat

Release 0.9.1 (December 25, 2013)
============

* FIX: installation issues

Release 0.9.0 (December 20, 2013)
============

* ENH: SelectFiles: a streamlined version of DataGrabber
* ENH: new tools for defining workflows: JoinNode, synchronize and itersource
* ENH: W3C PROV support with optional RDF export built into Nipype
* ENH: Added support for Simple Linux Utility Resource Management (SLURM)
* ENH: AFNI interfaces refactor, prefix, suffix are replaced by
       "flexible_%s_templates"
* ENH: New SPM interfaces:
		- spm.ResliceToReference,
		- spm.DicomImport
* ENH: New AFNI interfaces:
		- afni.AFNItoNIFTI
		- afni.TCorr1D